# DecisionGameCND

./: .gitignore  CMakeLists.txt  README.md
CrashedAndDeserted/: AdvRoll.cpp  Dice6App.cpp  Dice6App.hpp  DisAdvRoll.cpp  NormalRoll.cpp  NormalRoll.hpp  RollApp.hpp
CrashedAndDeserted/CrashedAndDeserted/: AdvRoll.cpp  AdvRoll.hpp  AdvRollTest.hpp  Boss.cpp  Boss.hpp  BossTest.cpp  BossTest.hpp  CMakeLists.txt  Dice20App.cpp  Dice20App.hpp  Dice20AppTest.hpp  Dice6App.cpp  Dice6App.hpp  Dice6AppTest.hpp  DisAdvRoll.cpp  DisAdvRoll.hpp  DisAdvRollTest.hpp  ExiledMember.cpp  ExiledMember.hpp  ExiledMemberTest.cpp  ExiledMemberTest.hpp  Goblin.cpp  Goblin.hpp  GoblinTest.cpp  GoblinTest.hpp  NormalRoll.cpp  NormalRoll.hpp  NormalRollTest.hpp  Orc.cpp  Orc.hpp  RollApp.hpp  RollStrategy.hpp  Troll.cpp  Troll.hpp  animalMage.cpp  animalMage.hpp  animalMageTest.hpp  animalRace.cpp  animalRace.hpp  animalWarrior.cpp  (+15 more)
CrashedAndDeserted/CrashedAndDeserted.xcodeproj/: project.pbxproj
CrashedAndDeserted/CrashedAndDeserted.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CrashedAndDeserted/CrashedAndDeserted.xcodeproj/project.xcworkspace/xcuserdata/aro.xcuserdatad/: UserInterfaceState.xcuserstate
CrashedAndDeserted/CrashedAndDeserted.xcodeproj/xcuserdata/aro.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CrashedAndDeserted/CrashedAndDeserted.xcodeproj/xcuserdata/aro.xcuserdatad/xcschemes/: xcschememanagement.plist
